Revision history for Mojolicious-Plugin-Ubic

0.04
       * Add HTML interface

0.03     Fri Nov  1 15:12:22 2013
       * Add support for MOJO_CONFIG for script/ubic-remote-admin

0.02     Fri Nov  1 13:53:51 2013
       * Add script/ubic-remote-admin

0.01     Fri Nov  1 13:39:58 2013
       * Add /services resource
       * Add /service/#name/:action resource