@@ -2,6 +2,7 @@ Revision history for Mojolicious-Plugin-Ubic
 
 0.04
        * Add HTML interface
+       * Add proxy commands to other servers
 
 0.03     Fri Nov  1 15:12:22 2013
        * Add support for MOJO_CONFIG for script/ubic-remote-admin
